codeanywhere_workspace/routes/temp/108f6ca4d1963faa76f6/errors
/usercode/file.cpp: In function 'int main()':
/usercode/file.cpp:6:1: error: expected ';' before '}' token
 }
 ^
